cleaning comments